# DiplomProject

./: .env.template  .gitignore  README.md  docker-compose.yml  docker_compose.sh  pyproject.toml
platform/: main.py
platform_backend/: .env  .env.template  create_fastapi_app.py  pyproject.toml  run_main.py
platform_backend/actions/: create_superuser.py
platform_backend/alembic/versions/: 2025_02_13_2315-485f8652ee87_create_access_tokens_table.py  2025_04_01_1839-db84b553dcd5_add_iin_field.py  2025_04_22_2251-ea46d67b37d5_create_tables_for_analytics.py  2025_04_22_2305-399f32e1e9a9_create_metabase_dashboards_table.py  2025_04_22_2310-df006c7dd8ae_updated_user_table.py  2025_04_27_1453-92d9bb2671cb_create_initial_tables_for_sources_cache_.py  2025_04_27_2220-33c38dc5ed2e_change_chart_type_to_enum.py  2025_04_28_1500-9b3767fcecdb_add_group_by_column.py  2025_04_29_1854-5e06737f8b29_create_dashboards_configuration_table.py  2025_05_11_2209-8902cf6e5270_add_route_id_to_dashboard_configurations.py
platform_backend/api/api_v1/: __init__.py  auth.py  messages.py  predict.py  users.py
platform_backend/core/: config.py
platform_backend/core/authentication/: user_manager.py
platform_backend/core/gunicorn/: __init__.py  app_options.py  logger.py
platform_backend/core/models/: __init__.py  access_token.py  base.py  db_helper.py  predict_model.py  session_dep.py  user.py
platform_backend/core/schemas/: user.py
platform_backend/libraries/fastapi_users/: core.py
platform_backend/prediction_models/: model_v1.pkl  rf_model.pkl
platform_backend/system/: main.py
(+177 files in other folders)
